maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: ':' expected but ',' found.
def dansLeCadre(a,b):Boolean={
                 ^JediEscaper:31: error: identifier expected but '}' found.
}
^